# ── How to build the package ──────────────────────────────
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Package metadata ──────────────────────────────────────
[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generator module for the A-Maze-ing project"
requires-python = ">=3.10"
dependencies = []

# ── Optional dev dependencies ─────────────────────────────
[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
]

# ── Where to find the package source ─────────────────────
[tool.setuptools.packages.find]
where = ["src"]